--- a/flaskapp.cfg
+++ b/flaskapp.cfg
@@ -6,4 +6,5 @@ HOST_NAME = os.environ.get('OPENSHIFT_APP_DNS','localhost')
 APP_NAME = os.environ.get('OPENSHIFT_APP_NAME','flask')
 IP = os.environ.get('OPENSHIFT_PYTHON_IP','127.0.0.1')
 PORT = int(os.environ.get('OPENSHIFT_PYTHON_PORT',8080))
-POSTGRES = "dbname='actorata' user='admind4j5wcq' host='"+HOST_NAME+"' password='yi_yXzgNX-U4'"
+POSTGRES_URL = os.environ['OPENSHIFT_POSTGRESQL_DB_URL']
+POSTGRES = "dbname='actorata' user='admind4j5wcq' host='"+POSTGRES_URL+"' password='yi_yXzgNX-U4'"
