--- a/flaskapp.cfg
+++ b/flaskapp.cfg
@@ -7,4 +7,5 @@ APP_NAME = os.environ.get('OPENSHIFT_APP_NAME','flask')
 IP = os.environ.get('OPENSHIFT_PYTHON_IP','127.0.0.1')
 PORT = int(os.environ.get('OPENSHIFT_PYTHON_PORT',8080))
 POSTGRES_URL = os.environ['OPENSHIFT_POSTGRESQL_DB_URL']
-POSTGRES = "dbname='actorata' user='admind4j5wcq' host='"+POSTGRES_URL+"' password='yi_yXzgNX-U4'"
+POSTGRES_HOST = os.environ['OPENSHIFT_POSTGRESQL_DB_HOST']
+POSTGRES = "dbname='actorata' user='admind4j5wcq' host='"+POSTGRES_HOST+"' password='yi_yXzgNX-U4'"
