--- a/flaskapp.cfg
+++ b/flaskapp.cfg
@@ -8,4 +8,4 @@ IP = os.environ.get('OPENSHIFT_PYTHON_IP','127.0.0.1')
 PORT = int(os.environ.get('OPENSHIFT_PYTHON_PORT',8080))
 POSTGRES_URL = os.environ['OPENSHIFT_POSTGRESQL_DB_URL']
 POSTGRES_HOST = os.environ['OPENSHIFT_POSTGRESQL_DB_HOST']
-POSTGRES = "dbname='actorata' user='admind4j5wcq' host='"+POSTGRES_HOST+"' password='yi_yXzgNX-U4'"
+POSTGRES = "dbname='actorata' user='admind4j5wcq' host='"+POSTGRES_URL+"' password='yi_yXzgNX-U4'"
