--- a/flaskapp.cfg
+++ b/flaskapp.cfg
@@ -1,11 +1,13 @@
 import os
 DEBUG = True
 PROPAGATE_EXCEPTIONS = True
-SECRET_KEY = os.environ.get('SECRET_KEY','\xfb\x13\xdf\xa1@i\xd6>V\xc0\xbf\x8fp\x16#Z\x0b\x81\xeb\x16')
+SECRET_KEY = os.environ.get('SECRET_KEY',None)
 HOST_NAME = os.environ.get('OPENSHIFT_APP_DNS','localhost')
 APP_NAME = os.environ.get('OPENSHIFT_APP_NAME','flask')
 IP = os.environ.get('OPENSHIFT_PYTHON_IP','127.0.0.1')
 PORT = int(os.environ.get('OPENSHIFT_PYTHON_PORT',8080))
 POSTGRES_URL = os.environ['OPENSHIFT_POSTGRESQL_DB_URL']
 POSTGRES_HOST = os.environ['OPENSHIFT_POSTGRESQL_DB_HOST']
-POSTGRES = "dbname='actorata' user='admind4j5wcq' host='"+POSTGRES_HOST+"' password='yi_yXzgNX-U4'"
+POSTGRES = "dbname='{db_name}' user='{user}' host='{host}' password='{password}'"
+POSTGRES = POSTGRES.format(db_name=os.environ['POSTGRESQL_DATABASE'],user=os.environ['POSTGRESQL_USER'],
+host=POSTGRES_HOST,password=os.environ['POSTGRESQL_PASSWORD'],)
