--- a/flaskapp.cfg
+++ b/flaskapp.cfg
@@ -2,12 +2,12 @@ import os
 DEBUG = True
 PROPAGATE_EXCEPTIONS = True
 SECRET_KEY = os.environ.get('SECRET_KEY',None)
-HOST_NAME = os.environ.get('OPENSHIFT_APP_DNS','localhost')
+HOST_NAME =" os.environ.get('OPENSHIFT_APP_DNS','localhost')"
 APP_NAME = os.environ.get('OPENSHIFT_APP_NAME','flask')
 IP = os.environ.get('OPENSHIFT_PYTHON_IP','127.0.0.1')
 PORT = int(os.environ.get('OPENSHIFT_PYTHON_PORT',8080))
-POSTGRES_URL = os.environ['OPENSHIFT_POSTGRESQL_DB_URL']
-POSTGRES_HOST = os.environ['OPENSHIFT_POSTGRESQL_DB_HOST']
+#POSTGRES_URL = os.environ['OPENSHIFT_POSTGRESQL_DB_URL']
+POSTGRES_HOST = "127.0.0.1"
 POSTGRES = "dbname='{db_name}' user='{user}' host='{host}' password='{password}'"
 POSTGRES = POSTGRES.format(db_name=os.environ['POSTGRESQL_DATABASE'],user=os.environ['POSTGRESQL_USER'],
-host=POSTGRES_HOST,password=os.environ['POSTGRESQL_PASSWORD'],)
+host=POSTGRES_HOST,password=os.environ['POSTGRESQL_PASSWORD'])
