--- a/flaskapp.cfg
+++ b/flaskapp.cfg
@@ -9,5 +9,5 @@ PORT = int(os.environ.get('OPENSHIFT_PYTHON_PORT',8080))
 #POSTGRES_URL = os.environ['OPENSHIFT_POSTGRESQL_DB_URL']
 POSTGRES_HOST = "127.0.0.1"
 POSTGRES = "dbname='{db_name}' user='{user}' host='{host}' password='{password}'"
-POSTGRES = POSTGRES.format(db_name=os.environ['POSTGRESQL_DATABASE'],user=os.environ['POSTGRESQL_USER'],
-host=POSTGRES_HOST,password=os.environ['POSTGRESQL_PASSWORD'])
+POSTGRES = POSTGRES.format(db_name=os.environ['database-name'],user=os.environ['database-user'],
+host=POSTGRES_HOST,password=os.environ['database-password'])
