--- a/flaskapp.cfg
+++ b/flaskapp.cfg
@@ -7,7 +7,7 @@ APP_NAME = os.environ.get('OPENSHIFT_APP_NAME','flask')
 IP = os.environ.get('OPENSHIFT_PYTHON_IP','127.0.0.1')
 PORT = int(os.environ.get('OPENSHIFT_PYTHON_PORT',8080))
 #POSTGRES_URL = os.environ['OPENSHIFT_POSTGRESQL_DB_URL']
-POSTGRES_HOST = "127.0.0.1"
+POSTGRES_HOST = os.environ.get('POSTGRESQL_SERVICE_HOST',"127.0.0.1")
 POSTGRES = "dbname='{db_name}' user='{user}' host='{host}' password='{password}'"
-POSTGRES = POSTGRES.format(db_name=os.environ['database-name'],user=os.environ['database-user'],
-host=POSTGRES_HOST,password=os.environ['database-password'])
+POSTGRES = POSTGRES.format(db_name=os.environ['_database_name_'],user=os.environ['_database_user_'],
+host=POSTGRES_HOST,password=os.environ['_database_password_'])
